# rules_spotless

./: .bazelrc-java  MODULE.bazel  WORKSPACE  rules_spotless_dependencies_install.json
.github/workflows/: build.yml  publish.yml
dependencies/: load_dependencies.bzl  load_rule_dependencies.bzl
generate/: BUILD.bazel  MODULE.bazel  WORKSPACE  generate.py  get_spotless_group.py  get_version.py  publish.py
spotless/: BUILD  defs.bzl  load_spotless_dependencies.bzl  load_spotless_rule_dependencies.bzl  run_all_spotless.sh
spotless/wrapper/: BUILD
spotless/wrapper/src/main/java/com/diffplug/bazel/spotless/: BUILD.bazel  BaseFormatter.java  BazelProvisioner.java  GroovyFormatter.java  JavaFormatter.java  JsonFormatter.java  SpotlessApply.java  SpotlessCheck.java  SpotlessFormatter.java  YamlFormatter.java
spotless/wrapper/src/main/java/com/diffplug/bazel/spotless/config/: BUILD.bazel  generic_config.proto  groovy_config.proto  java_config.proto  json_config.proto  spotless_config.proto  yaml_config.proto
spotless/wrapper/src/main/java/rules_checkstyle/: FormatExecutor.java  FormatExtension.java  JavaExtension.java  JavaFormatter.java  RunApply.java  RunCheck.java
